correction: fix display problem for chart performance and chart current position on mobile

--- a/src/partial/Strategy/ChartPerformance.module.css
+++ b/src/partial/Strategy/ChartPerformance.module.css
@@ -7,7 +7,7 @@
 
 .chart h4 {
     position: absolute;
-    top: 0;
+    top: -30px;
     left: 0;
     background: unset;
     font-size: 15px;
